# Computational-Statistical-Physics

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements.txt
.mplconfig/: fontlist-v390.json
bash_scripts/: run_fixed_config_eval.sh  run_fixed_eval.sh  run_sweep.sh
scripts/: config.yaml  control_panel.py  evaluate_fixed_config.py  plot_hamiltonian.py  run_annealing.cpp  run_dataset_sweep.py  run_interaction.cpp  run_metrics.py  run_plots.py
src/annealing/: annealing.cpp  annealing.hpp  spinglass.cpp  spinglass.hpp
src/hits/: data_gen.py  generate_hits.py  hits.py
src/interaction/: interaction.cpp  interaction.hpp  main
src/plotting/: metrics.py  plot_annealing_animation.py  plot_hamiltonian.py  plot_hits.py  plot_tracks.py
src/simulated annealing/: annealing.cpp  spinglass.cpp  spinglass.hpp
